--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,10 @@ body {
 	background: #eee;
   -webkit-font-smoothing: antialiased;
 }
-
+.small{
+	font-size: small;
+	width: 55px;
+}
 hgroup {
 	text-align:center;
 	margin-top: 4em;
@@ -17,7 +20,7 @@ h1 { color: #636363; }
 
 h3 { color: #4a89dc; }
 
-form {
+form,.form {
 	width: 680px;
 	margin: 4em auto;
 	padding: 3em 2em 2em 2em;
